Ajustes nas tabelas.

--- a/services/src/main/webapp/home.html
+++ b/services/src/main/webapp/home.html
@@ -189,7 +189,8 @@
     	<thead>
     		<tr><th colspan="4">Minhas Rotas</th></tr>
     	</thead>
-      <tbody></tbody>
+      <tbody>
+      </tbody>
    </table>
 	</div>
 
@@ -214,14 +215,15 @@
     	<thead>
     		<tr><th colspan="3">Horários</th></tr>
     	</thead>
-      <tbody></tbody>
+      <tbody>
+	     </tbody>
    </table>
 	</div>
 	
 	<div id="dialog-buscar">
 	
 		<label>Marque no mapa sua localização</label>
-		<textarea id="endereco" class="span5" style="height: 50px; font-size: 10pt" readonly></textarea>
+		<textarea id="endereco" class="span5" style="height: 50px; font-size: 10pt" readonly placeholder="Marque um ponto no mapa"></textarea>
 				
 		Raio
 		<input type="text" id="radius" name="radius" style="width: 55px; border: 0; color: #f6931f; font-weight: bold; text-align:center" readonly /> metros
@@ -230,7 +232,7 @@
 		<label>Dia da Semana</label>
 		<div id="radio" class="span5" style="margin-left: 0px; padding-top: 0px;">
 			<input type="radio" id="radio1" name="radio" value="1" /><label for="radio1" style="font-size:10pt; width:50px;">Dom</label>
-			<input type="radio" id="radio2" name="radio" value="2" /><label for="radio2" style="font-size:10pt; width:50px;">Seg</label>
+			<input type="radio" id="radio2" name="radio" value="2" checked/><label for="radio2" style="font-size:10pt; width:50px;">Seg</label>
 			<input type="radio" id="radio3" name="radio" value="3" /><label for="radio3" style="font-size:10pt; width:50px;">Ter</label>
 			<input type="radio" id="radio4" name="radio" value="4" /><label for="radio4" style="font-size:10pt; width:50px;">Qua</label>
 			<input type="radio" id="radio5" name="radio" value="5" /><label for="radio5" style="font-size:10pt; width:50px;">Qui</label>
