Ajustes para evitar erro de acentuação.

--- a/services/src/main/webapp/login.html
+++ b/services/src/main/webapp/login.html
@@ -14,7 +14,7 @@
 		<div id="map"></div>
 		<form class="form">
 			<h1>
-				<span class="log-in">Log in</span>
+				<span class="log-in">ShareCar - Log in</span>
 			</h1>
 			<p class="float">
 				<label for="username"><i class="icon-user"></i>CPF</label> 
@@ -33,7 +33,7 @@
 	<script>
 		$(function(){
 		
-			loadMapCenteredWithUserGeolocation('map', false, true);
+			loadMapCenteredWithUserGeolocation('map', true, false);
 
 			$("#username").focus();
 			
