--- a/services/src/main/webapp/home.html
+++ b/services/src/main/webapp/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>ShareCar</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href="css/main.css" rel="stylesheet" media="screen" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 	<link href="css/jquery-ui-1.10.1.custom.min.css" rel="stylesheet" media="screen"/>
