--- a/src/main/webapp/teste.html
+++ b/src/main/webapp/teste.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
-</script>
-<script>
-
-	$(document).ready(function(){
-		
-		$("#b1").click(function(){
-			$.ajax({
-				url: "api/auth",
-				type: "post",
-				data: "{'username': 'guest', 'password': '123456'}",
-				success: function(){
-					alert("success");
-				},
-				statusCode: {
-					401: function() {
-						alert("falha de autenticação");
-					}
-				}
-			});
+	<link href="css/main.css" rel="stylesheet" media="screen" />
+	<link href="css/jquery-ui-1.10.2.custom.min.css" type="text/css" rel="stylesheet"/>
+	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
+	<style>
+	table.table thead .sorting,
+table.table thead .sorting_asc,
+table.table thead .sorting_desc,
+table.table thead .sorting_asc_disabled,
+table.table thead .sorting_desc_disabled {
+    cursor: pointer;
+    *cursor: hand;
+}
+ 
+table.table thead .sorting { background: url('images/sort_both.png') no-repeat center right; }
+table.table thead .sorting_asc { background: url('images/sort_asc.png') no-repeat center right; }
+table.table thead .sorting_desc { background: url('images/sort_desc.png') no-repeat center right; }
+ 
+table.table thead .sorting_asc_disabled { background: url('images/sort_asc_disabled.png') no-repeat center right; }
+table.table thead .sorting_desc_disabled { background: url('images/sort_desc_disabled.png') no-repeat center right; }
+	
+	</style>
+	<script src="js/Route.js" type="text/javascript"></script>
+	<script src="js/jquery-1.9.1.min.js"></script>
+	<script src="js/jquery.dataTables.min.js"></script>
+	<script>
+	
+	function teste(data){
+		$('#table-rotas').dataTable({
+				"sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
+		    "bPaginate": true,
+		    "bJQueryUI": true,
+		    "bLengthChange": false,
+		    "bFilter": true,
+		    "bSort": true,
+		    "bInfo": false,
+		    "bDestroy": true,
+		    "iDisplayLength": 3,
+		    "oLanguage": {
+		        "sProcessing": "Carregando ...",
+		        "sZeroRecords": "Você ainda não cadastrou rotas."
+		    },
+		    "aaData": data,
+		    "aoColumns": [
+		        { "sTitle": "Minhas Rotas", "mDataProp": "description", "sWidth": "100%" }
+		    ]
 		});
-		
-		$("#b2").click(function(){
-			$.ajaxSetup({
-				headers: {
-					'Authorization': "Basic XXXXX"
-				}
-			});
 
-			$.ajax({
-				url: "api/route",
-				type: "get",
-				//username: "80342167553",
-				//password: "123456",
-				//data: null,
-				assync: false,
-				success: function(){
-					alert("success");
-				},
-		        beforeSend : function(req) {
-		            req.setRequestHeader('Authorization', 'Basic dXNlcm5hbWU6cGFzc3dvcmQ='); // <<<<----- USED HERE
-		        },
-				statusCode: {
-					401: function() {
-						alert("falha de autenticação");
-					},
-					403: function() {
-						alert("não autorizado");
-					}
-				}
-			});
-		});
+	}
+
+	$(function(){
+		var route = new Route();
+		route._findAll(teste);
+		$.extend( $.fn.dataTableExt.oStdClasses, {
+		    "sWrapper": "dataTables_wrapper form-inline"
+		} );
 	});
-
-      </script>
+	</script>
 </head>
 <body>
-	<button id="b1">Autenticar</button>
-	<button id="b2">Obter rotas</button>
+		<div class="demo_jui">
+	    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="table-rotas">
+  	 </table>
+  	</div>
 </body>
 </html>
