--- a/src/main/webapp/teste.html
+++ b/src/main/webapp/teste.html
@@ -1,68 +1,92 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="css/main.css" rel="stylesheet" media="screen" />
-	<link href="css/jquery-ui-1.10.2.custom.min.css" type="text/css" rel="stylesheet"/>
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
-	<style>
-	table.table thead .sorting,
-table.table thead .sorting_asc,
-table.table thead .sorting_desc,
-table.table thead .sorting_asc_disabled,
-table.table thead .sorting_desc_disabled {
-    cursor: pointer;
-    *cursor: hand;
-}
- 
-table.table thead .sorting { background: url('images/sort_both.png') no-repeat center right; }
-table.table thead .sorting_asc { background: url('images/sort_asc.png') no-repeat center right; }
-table.table thead .sorting_desc { background: url('images/sort_desc.png') no-repeat center right; }
- 
-table.table thead .sorting_asc_disabled { background: url('images/sort_asc_disabled.png') no-repeat center right; }
-table.table thead .sorting_desc_disabled { background: url('images/sort_desc_disabled.png') no-repeat center right; }
-	
-	</style>
-	<script src="js/Route.js" type="text/javascript"></script>
-	<script src="js/jquery-1.9.1.min.js"></script>
-	<script src="js/jquery.dataTables.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/DT_bootstrap.css">
+	<script type="text/javascript" charset="utf-8" src="js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/jquery.dataTables.min.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/DT_bootstrap.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/Route.js"></script>
+
 	<script>
-	
 	function teste(data){
 		$('#table-rotas').dataTable({
-				"sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
-		    "bPaginate": true,
-		    "bJQueryUI": true,
-		    "bLengthChange": false,
-		    "bFilter": true,
-		    "bSort": true,
-		    "bInfo": false,
-		    "bDestroy": true,
-		    "iDisplayLength": 3,
-		    "oLanguage": {
-		        "sProcessing": "Carregando ...",
-		        "sZeroRecords": "Você ainda não cadastrou rotas."
-		    },
-		    "aaData": data,
-		    "aoColumns": [
-		        { "sTitle": "Minhas Rotas", "mDataProp": "description", "sWidth": "100%" }
-		    ]
-		});
+			"bFilter": false,
+			"bLengthChange": false,
+			"bInfo": false,
+			"sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
+			"sPaginationType": "bootstrap",
+			"oLanguage": {
+				"sLengthMenu": "_MENU_ records per page",
+				"sProcessing": "Carregando ...",
+				"sZeroRecords": "Você ainda não cadastrou rotas.",
+				"oPaginate": {
+					"sNext": "Próximo",
+					"sPrevious": "Anterior"
+				}
+			},
+			"iDisplayLength": 3,
+			"aaData": data,
+			"aoColumnDefs": [ 
+		              		 { "aTargets": [0], "mData": "description", "sTitle": "Minhas Rotas" },
 
+			                 { "aTargets": [1], 
+													"sWidth": "20px",
+													"mData": "id", 
+													"bSortable": false,
+													"mRender": function ( data ) {
+															return '<a href="#" name="route-' + data + '" route="' + data + '"><img src="img/map.png" style="height: 20px; width: 20px;"/></a>';
+											    }
+											  },
+											  { "aTargets": [2], 
+													"sWidth": "20px",
+													"mData": "id", 
+													"bSortable": false,
+													"mRender": function ( data ) {
+															return '<a href="#" name="route-' + data + '" route="' + data + '"><img src="img/calendar.png" style="height: 20px; width: 20px;"/></a>';
+											    }
+											  },
+			              		{ "aTargets": [3], 
+													"sWidth": "20px",
+													"mData": "id", 
+													"bSortable": false,
+													"mRender": function ( data ) {
+															return '<a href="#" name="route-' + data + '" route="' + data + '"><img src="img/delete.png" style="height: 20px; width: 20px;"/></a>';
+											    }
+											  }
+			             		],
+			"fnHeaderCallback": function( nHead ) {
+				$(nHead.getElementsByTagName('th')[0]).attr("colspan","4");
+				for(var i = 1; i <= 3; i++){
+					$(nHead.getElementsByTagName('th')[1]).remove();
+				}
+			},
+			"fnRowCallback": function( nRow ) {
+					$(nRow.getElementsByTagName('td')[1]).attr("width","20px");
+					$(nRow.getElementsByTagName('td')[2]).attr("width","20px");
+					$(nRow.getElementsByTagName('td')[3]).attr("width","20px");
+			}
+						             		
+		});
 	}
 
+	function make_view_link(oObj) {
+    var id = oObj.aData.id; 
+    return "<a href=#'"+id+"'><img src='img/map.png'></a>";
+     
+	}
+	
 	$(function(){
 		var route = new Route();
 		route._findAll(teste);
-		$.extend( $.fn.dataTableExt.oStdClasses, {
-		    "sWrapper": "dataTables_wrapper form-inline"
-		} );
 	});
 	</script>
 </head>
 <body>
-		<div class="demo_jui">
+		<div class="container" style="margin-top: 10px">
 	    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="table-rotas">
   	 </table>
   	</div>
 </body>
 </html>
+
