--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -3,23 +3,28 @@
 <head>
 	<title>ShareCar</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link href="css/main.css" rel="stylesheet" media="screen" />
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen"/>
-	<link href="css/jquery-ui-1.10.2.custom.min.css" rel="stylesheet" media="screen"/>
 	
-	<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="js/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
-	<script src="js/globalize.js" type="text/javascript"></script>
-	<script src="js/globalize-de.js" type="text/javascript"></script>
-	<script src="js/timespinner.js" type="text/javascript"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry,places" type="text/javascript"></script>
+	<link href="css/main.css" rel="stylesheet" type="text/css"/>
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="css/DT_bootstrap.css" rel="stylesheet" type="text/css" >	
+	<link href="css/jquery-ui-1.10.2.custom.min.css" rel="stylesheet" type="text/css"/>
 	
-	<script src="js/User.js" type="text/javascript"></script>
-	<script src="js/Coord.js" type="text/javascript"></script>
-	<script src="js/Route.js" type="text/javascript"></script>
-	<script src="js/Schedule.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	<script src="js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/jquery-ui-1.10.1.custom.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/jquery.dataTables.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/DT_bootstrap.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/globalize.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/globalize-de.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/timespinner.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry,places" type="text/javascript" charset="utf-8"></script>
+	
+	<script src="js/User.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/Coord.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/Route.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/Schedule.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
+	
 	<script>
 	$(function(){
 
@@ -49,9 +54,9 @@
 
 		$("#criar").click(function(){
 			var route = new Route();
-			route._findAll(loadRoutesTable);
+			route._findAll(teste);
 			$("#dialog-criar").dialog("open").dialog("option", "title", "Criar Rota").dialog({
-				position: { my: "left top", at: "left bottom", of: window },
+				position: { my: "left bottom", at: "left", of: window },
 				buttons: [{
 					text: "Salvar", 
 					click: function() { 
@@ -157,6 +162,7 @@
 	
 </head>
 <body>
+
 	<div class="navbar" style="margin-bottom: 0px;">
 		<div class="navbar-inner">
 			<a class="brand" href="home" style="font-size: 30pt; font-weight: bold; text-shadow: 2px -2px #ccc">
@@ -172,30 +178,32 @@
 			</ul>			
 		</div>
 	</div>
-
-	<div id="map"></div>
-
+	<div id="map" class="google-maps"></div>
+	
 	<div id="dialog-criar">
+
 		<form id="frm-criar">
-		<label>Nome</label> 
-		<input id="route-name" type="text" placeholder="Digite nome da rota" class="span5">
-		 
-		<label>Origem</label> 
-		<input id="start" type="text" class="span5"> 
-		
-		<label>Destino</label> 
-		<input id="end" type="text" class="span5"> 
+			<label>Nome</label> 
+			<input id="route-name" type="text" placeholder="Digite nome da rota" class="span5">
+			 
+			<label>Origem</label> 
+			<input id="start" type="text" class="span5"> 
+			
+			<label>Destino</label> 
+			<input id="end" type="text" class="span5"> 
 		</form>
 		
 		<div id="route-message"></div>
 		
-    <table id="table-rotas" class="table table-bordered">
+    <table class="table table-striped table-bordered" id="table-rotas"></table>
+		
+    <!-- table id="table-rotas" class="table table-bordered">
     	<thead>
     		<tr><th colspan="4">Minhas Rotas</th></tr>
     	</thead>
       <tbody>
       </tbody>
-   </table>
+   </table -->
 	</div>
 
 	<div id="dialog-sched">
