--- a/src/main/webapp/teste.html
+++ b/src/main/webapp/teste.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" >
 	<link rel="stylesheet" type="text/css" href="css/DT_bootstrap.css">
 	<script type="text/javascript" charset="utf-8" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/jquery.dataTables.min.js"></script>
@@ -21,8 +21,8 @@
 				"sProcessing": "Carregando ...",
 				"sZeroRecords": "Você ainda não cadastrou rotas.",
 				"oPaginate": {
-					"sNext": "Próximo",
-					"sPrevious": "Anterior"
+					"sNext": "",
+					"sPrevious": ""
 				}
 			},
 			"iDisplayLength": 3,
@@ -70,12 +70,6 @@
 		});
 	}
 
-	function make_view_link(oObj) {
-    var id = oObj.aData.id; 
-    return "<a href=#'"+id+"'><img src='img/map.png'></a>";
-     
-	}
-	
 	$(function(){
 		var route = new Route();
 		route._findAll(teste);
@@ -83,10 +77,9 @@
 	</script>
 </head>
 <body>
-		<div class="container" style="margin-top: 10px">
 	    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="table-rotas">
   	 </table>
-  	</div>
+  	
 </body>
 </html>
 
