--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -54,15 +54,19 @@
 
 		$("#criar").click(function(){
 			var route = new Route();
-			route._findAll(teste);
+			route._findAll(loadRoutesTable);
 			$("#dialog-criar").dialog("open").dialog("option", "title", "Criar Rota").dialog({
 				position: { my: "left bottom", at: "left", of: window },
 				buttons: [{
 					text: "Salvar", 
-					click: function() { 
-						route._insert($("#route-name").val(), google.maps.geometry.encoding.decodePath(directionsDisplay.getDirections().routes[0].overview_polyline.points),  success, error);
-						route._findAll(loadRoutesTable);
-					}
+					click: function() {
+						$.when(
+							route._insert($("#route-name").val(), google.maps.geometry.encoding.decodePath(directionsDisplay.getDirections().routes[0].overview_polyline.points),  success, error)
+						).done(function(){
+								route._findAll(loadRoutesTable);
+							}
+						);
+			    } 
 				}],
 				close: function() {
 					$("#frm-criar").each(function() {this.reset();});
@@ -195,7 +199,7 @@
 		
 		<div id="route-message"></div>
 		
-    <table class="table table-striped table-bordered" id="table-rotas"></table>
+    <table class="table table-striped table-bordered" id="table-rotas" style="padding:0"></table>
 		
     <!-- table id="table-rotas" class="table table-bordered">
     	<thead>
@@ -224,13 +228,15 @@
 		</form>
 		<div id="sched-message"></div>
 		
-    <table id="table-schedules" class="table table-bordered">
+		<table class="table table-striped table-bordered" id="table-schedules" style="padding:0"></table>
+		
+    <!-- table id="table-schedules" class="table table-bordered">
     	<thead>
     		<tr><th colspan="3">Horários</th></tr>
     	</thead>
       <tbody>
 	     </tbody>
-   </table>
+   </table -->
 	</div>
 	
 	<div id="dialog-buscar">
