Ajustes para funcionar na versão 2.4.0-BETA2. Ajuste no script que pega o polígono da rota, a API do google foi atualizada.

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -61,8 +61,9 @@
 				buttons: [{
 					text: "Salvar", 
 					click: function() {
+						console.log(directionsDisplay.getDirections());
 						$.when(
-							route._insert($("#route-name").val(), google.maps.geometry.encoding.decodePath(directionsDisplay.getDirections().routes[0].overview_polyline.points),  success, error)
+							route._insert($("#route-name").val(), directionsDisplay.getDirections().routes[0].overview_path,  success, error)
 						).done(function(){
 								route._findAll(loadRoutesTable);
 							}
